--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,9 @@
 .App {
   text-align: center;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -35,4 +33,13 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+button{
+  font-size: 200px;
+  margin-left: 200px;
+}
+span{
+  font-size: 200px;
+  margin-left: 200px;
 }
